# txdatadog

./: .coveragerc  .gitignore  .travis.yml  COPYING  README.rst  setup.cfg  setup.py  tox.ini
.github/workflows/: packaging.yml
txdatadog/: __init__.py  client.py  metrics.py
txdatadog/tests/: __init__.py  fakes.py  strategies.py  test_fakes.py  test_metrics.py
