[metadata]
name = txdatadog
url = https://github.com/Julian/txdatadog
project_urls = 
    Source = https://github.com/Julian/txdatadog
    Issues = https://github.com/Julian/txdatadog/issues/
description = Datadog statsd APIs for Twisted
long_description = file: README.rst
author = Julian Berman
author_email = Julian+txdatadog@GrayVines.com
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
setup_requires = setuptools_scm
install_requires =
    attrs>=17.1.0
    cached_property
    importlib_metadata
    pyrsistent
    twisted

[flake8]
exclude = txdatadog/__init__.py

[bdist_wheel]
universal = 1
